--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -16,6 +16,8 @@
     --text-boxshadow1: #ffffff50;
     --text-boxshadow2: #ffffff70;
 
+    --cont-bordercolor1: #595959;
+    
     //modals
     --modal-background: #313131;
     --modal-line1: #3b3b3b;
@@ -101,6 +103,8 @@
     --text-boxshadow1: #00000050;
     --text-boxshadow2: #00000070;
 
+    --cont-bordercolor1: #dcdcdc;
+    
     //modals
     --modal-background: #dcdcdc;
     --modal-line1: #b5b5b5;
@@ -123,7 +127,7 @@
     --navlink-others-color-hover: #816f96;
     //index
     --index-post-bg-color: #ffffff;
-    --link_group-bg-color: #ffffff;
+    --link_group-bg-color: #f9f9f9;
     --tcate-bgcolor: #f9f9f9;
     --tcate-hover: #ffffff;
     //read
