--- a/OmneFictio.Web/wwwroot/css/index.css
+++ b/OmneFictio.Web/wwwroot/css/index.css
@@ -31,6 +31,8 @@ nav.nav_index .link_group {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+  border-top: 1px solid var(--background-color2);
+  border-bottom: 1px solid var(--background-color2);
 }
 nav.nav_index .link_group .link_cont {
   padding: 7px 10px;
@@ -82,17 +84,64 @@ nav.nav_index .community_links {
   width: 100%;
   aspect-ratio: 1/0.5;
   border-radius: 10px;
-  background-color: red;
+  position: relative;
 }
-.tutorials .featured .swiper-cont img {
-  border-radius: 10px;
+.tutorials .featured .swiper-cont .swiper-images {
   width: 100%;
   height: 100%;
+}
+.tutorials .featured .swiper-cont .swiper-images a {
+  width: inherit;
+  height: inherit;
+  display: none;
+  opacity: 1;
+  transition: all 0.1s ease-in-out;
+}
+.tutorials .featured .swiper-cont .swiper-images a img {
+  width: inherit;
+  height: inherit;
+  border-radius: 10px;
+}
+.tutorials .featured .swiper-cont .swiper-images a.active {
+  display: block;
+}
+.tutorials .featured .swiper-cont .fswipe-prev,
+.tutorials .featured .swiper-cont .fswipe-next {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: flex-end;
+  padding: 6px;
+  z-index: 200;
+}
+.tutorials .featured .swiper-cont .fswipe-prev i,
+.tutorials .featured .swiper-cont .fswipe-next i {
+  font-size: 1.6rem;
+  display: flex;
+  border-radius: 50%;
+  padding: 8px;
+  cursor: pointer;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.2509803922);
+  opacity: 0.3;
+  transition: all 0.1s ease-in-out;
+}
+.tutorials .featured .swiper-cont .fswipe-prev i:hover,
+.tutorials .featured .swiper-cont .fswipe-next i:hover {
+  opacity: 1;
+}
+.tutorials .featured .swiper-cont .fswipe-prev {
+  left: 0;
+}
+.tutorials .featured .swiper-cont .fswipe-next {
+  right: 0;
 }
 .tutorials .featured .featured_description {
   width: 100%;
   border-radius: 10px;
-  border: 2px solid var(--background-color2);
+  border: 1px solid var(--cont-bordercolor1);
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -129,6 +178,7 @@ nav.nav_index .community_links {
   gap: 8px;
   transition: all 0.1s ease-in-out;
   background-color: var(--tcate-bgcolor);
+  border: 1px solid var(--cont-bordercolor1);
 }
 .tutorials .tutorial-categories .tcate:hover {
   background-color: var(--tcate-hover);
@@ -185,6 +235,9 @@ nav.nav_index .community_links {
 .topposts_group .postlist_cont .postlist .post .p-info {
   background-color: var(--index-post-bg-color);
 }
+.topposts_group .postlist_cont .postlist .post .usercard-onhover {
+  background-color: var(--index-post-bg-color) !important;
+}
 @media (min-width: 576px) {
   .tutorials .tutorial-categories .tcate {
     width: 32%;
@@ -201,6 +254,7 @@ nav.nav_index .community_links {
   nav.nav_index .link_group {
     padding: 10px 0 6px;
     background-color: var(--link_group-bg-color);
+    border: 1px solid var(--cont-bordercolor1);
     border-radius: 10px;
     margin-bottom: 16px;
   }
