--- a/OmneFictio.Web/wwwroot/css/index.scss
+++ b/OmneFictio.Web/wwwroot/css/index.scss
@@ -32,6 +32,8 @@ nav.nav_index {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+        border-top: 1px solid var(--background-color2);
+        border-bottom: 1px solid var(--background-color2);
 
         .link_cont {
             padding: 7px 10px;
@@ -90,19 +92,72 @@ nav.nav_index {
             width: 100%;
             aspect-ratio: 1 / 0.5;
             border-radius: 10px;
-            background-color: red;
+            position: relative;
 
-            img {
-                border-radius: 10px;
+            .swiper-images {
                 width: 100%;
                 height: 100%;
+
+                a {
+                    width: inherit;
+                    height: inherit;
+                    display: none;
+                    opacity: 1;
+                    transition: all 0.1s ease-in-out;
+
+                    img {
+                        width: inherit;
+                        height: inherit;
+                        border-radius: 10px;
+                    }
+                }
+
+                a.active {
+                    display: block;
+                }
+            }
+
+            .fswipe-prev,
+            .fswipe-next {
+                position: absolute;
+                height: 100%;
+                top: 0;
+                bottom: 0;
+                display: flex;
+                align-items: flex-end;
+                padding: 6px;
+                z-index: 200;
+
+                i {
+                    font-size: 1.6rem;
+                    display: flex;
+                    border-radius: 50%;
+                    padding: 8px;
+                    cursor: pointer;
+                    color: #fff;
+                    background-color: #00000040;
+                    opacity: 0.3;
+                    transition: all 0.1s ease-in-out;
+
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+            }
+
+            .fswipe-prev {
+                left: 0;
+            }
+
+            .fswipe-next {
+                right: 0;
             }
         }
 
         .featured_description {
             width: 100%;
             border-radius: 10px;
-            border: 2px solid var(--background-color2);
+            border: 1px solid var(--cont-bordercolor1);
             padding: 10px;
             display: flex;
             flex-direction: column;
@@ -144,6 +199,7 @@ nav.nav_index {
             gap: 8px;
             transition: all 0.1s ease-in-out;
             background-color: var(--tcate-bgcolor);
+            border: 1px solid var(--cont-bordercolor1);
 
             &:hover {
                 background-color: var(--tcate-hover);
@@ -210,6 +266,10 @@ nav.nav_index {
                 .p-info {
                     background-color: var(--index-post-bg-color);
                 }
+
+                .usercard-onhover {
+                    background-color: var(--index-post-bg-color) !important;
+                }
             }
         }
     }
@@ -244,9 +304,11 @@ nav.nav_index {
         .link_group {
             padding: 10px 0 6px;
             background-color: var(--link_group-bg-color);
+            border: 1px solid var(--cont-bordercolor1);
             border-radius: 10px;
             margin-bottom: 16px;
-            &:last-child{
+
+            &:last-child {
                 margin-bottom: unset;
             }
 
