Featured - swipe with descriptions

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -110,9 +110,25 @@
                 </div>
             </div>
             <div class="featured_description">
-                <h4>Writing about animals</h4>
-                <span>In this tutorial, we will examine how we can give life to animals. Writing an animal is not as
-                    simple as you might think!</span>
+                <div class="fdesc active" data-featured="1">
+                    <h4>Writing about animals</h4>
+                    <span>In this tutorial, we will examine how we can give life to animals. Writing an animal is not as
+                        simple as you might think!</span>
+                </div>
+                <div class="fdesc" data-featured="2">
+                    <h4>Educated writing</h4>
+                    <span>We will write super duper fancy stuff by using advanced language. You will never want to write
+                        plain and simple narration ever again.</span>
+                </div>
+                <div class="fdesc" data-featured="3">
+                    <h4>Knowledge is power</h4>
+                    <span>You must sometimes put references to different cultures to show your difference from other
+                        peasant writers. Ever heard of the Red Ogre who cried?</span>
+                </div>
+                <div class="fdesc" data-featured="4">
+                    <h4>Advanced punctuation</h4>
+                    <span>Yes, for the first time you will use ; : ~ - correctly.</span>
+                </div>
             </div>
         </div>
         <h3 class="tcates-title">Tutorials</h3>
