Featured pagination and auto swipe fix

--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -94,38 +94,44 @@
                 <div class="fswipe-next">
                     <i class="bi bi-caret-right-fill"></i>
                 </div>
+                <div class="fswipe-pagination">
+                    <span data-fswipe_tabIndex="1" class="active"></span>
+                    <span data-fswipe_tabIndex="2"></span>
+                    <span data-fswipe_tabIndex="3"></span>
+                    <span data-fswipe_tabIndex="4"></span>
+                </div>
                 <div class="swiper-images">
-                    <a href="/images/misc/tutorial1.webp" data-featured="1" class="active">
+                    <a href="/images/misc/tutorial1.webp" data-fswipe_tabIndex="1" class="active">
                         <img src="/images/misc/tutorial1.webp">
                     </a>
-                    <a href="/images/misc/tutorial2.webp" data-featured="2">
+                    <a href="/images/misc/tutorial2.webp" data-fswipe_tabIndex="2">
                         <img src="/images/misc/tutorial2.webp">
                     </a>
-                    <a href="/images/misc/tutorial3.jpg" data-featured="3">
+                    <a href="/images/misc/tutorial3.jpg" data-fswipe_tabIndex="3">
                         <img src="/images/misc/tutorial3.jpg">
                     </a>
-                    <a href="/images/misc/tutorial4.jpg" data-featured="4">
+                    <a href="/images/misc/tutorial4.jpg" data-fswipe_tabIndex="4">
                         <img src="/images/misc/tutorial4.jpg">
                     </a>
                 </div>
             </div>
             <div class="featured_description">
-                <div class="fdesc active" data-featured="1">
+                <div class="fdesc active" data-fswipe_tabIndex="1">
                     <h4>Writing about animals</h4>
                     <span>In this tutorial, we will examine how we can give life to animals. Writing an animal is not as
                         simple as you might think!</span>
                 </div>
-                <div class="fdesc" data-featured="2">
+                <div class="fdesc" data-fswipe_tabIndex="2">
                     <h4>Educated writing</h4>
                     <span>We will write super duper fancy stuff by using advanced language. You will never want to write
                         plain and simple narration ever again.</span>
                 </div>
-                <div class="fdesc" data-featured="3">
+                <div class="fdesc" data-fswipe_tabIndex="3">
                     <h4>Knowledge is power</h4>
-                    <span>You must sometimes put references to different cultures to show your difference from other
+                    <span>You must sometimes use references of different cultures to show your difference from
                         peasant writers. Ever heard of the Red Ogre who cried?</span>
                 </div>
-                <div class="fdesc" data-featured="4">
+                <div class="fdesc" data-fswipe_tabIndex="4">
                     <h4>Advanced punctuation</h4>
                     <span>Yes, for the first time you will use ; : ~ - correctly.</span>
                 </div>
