--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -30,7 +30,7 @@
   --navlink-others-color: #494152;
   --navlink-others-color-hover: #5f5a66;
   --index-post-bg-color: #313131;
-  --link_group-bg-color: #313131;
+  --cont-bgcolor1: #313131;
   --tcate-bgcolor: #313131;
   --tcate-hover: #454545;
   --register-form-color: #404040;
@@ -97,7 +97,7 @@
   --navlink-others-color: #9a90a6;
   --navlink-others-color-hover: #816f96;
   --index-post-bg-color: #ffffff;
-  --link_group-bg-color: #f9f9f9;
+  --cont-bgcolor1: #f9f9f9;
   --tcate-bgcolor: #f9f9f9;
   --tcate-hover: #ffffff;
   --register-form-color: #f0f0f0;
