--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -40,7 +40,7 @@
     --navlink-others-color-hover: #5f5a66;
     //index
     --index-post-bg-color: #313131;
-    --link_group-bg-color: #313131;
+    --cont-bgcolor1: #313131;
     --tcate-bgcolor: #313131;
     --tcate-hover: #454545;
     //read
@@ -127,7 +127,7 @@
     --navlink-others-color-hover: #816f96;
     //index
     --index-post-bg-color: #ffffff;
-    --link_group-bg-color: #f9f9f9;
+    --cont-bgcolor1: #f9f9f9;
     --tcate-bgcolor: #f9f9f9;
     --tcate-hover: #ffffff;
     //read
